Minor visual changes to Large Scale notebook. Substantial changes to Black Hole notebook adopting format.

--- a/_07_Large_Scale_Structure_of_the_Universe/Large_Scale_Structure_of_the_Universe.ipynb
+++ b/_07_Large_Scale_Structure_of_the_Universe/Large_Scale_Structure_of_the_Universe.ipynb
@@ -8,7 +8,10 @@
     }
    },
    "source": [
-    "<font size='6'><b>Our Vast Universe Probed with Big Data</b></font>\n",
+    "<br>\n",
+    "<br>\n",
+    "<font size='7'><u><b>Our Vast Universe Probed with Big Data</b></u></font>\n",
+    "<br>\n",
     "\n",
     "##### Written by Stephanie Juneau, NOAO (<mailto:sjuneau@noao.edu>), with contributions from Leah Fulmer & Gautham Narayan\n",
     "Last updated on 10/12/2018\n",
@@ -125,7 +128,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "outputs": [],
    "source": [
     "# Here, you are importing the libraries needed for this notebook.\n",
@@ -145,6 +152,9 @@
     "# For 3D Plotting:\n",
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
+    "\n",
+    "# Experimental\n",
+    "import ipywidgets as widgets\n",
     "\n",
     "print(\"\\nDone! You have successfully imported the libraries.\")"
    ]
@@ -393,19 +403,19 @@
     "# Or choose one of the galaxies below (you need to delete the \"#\" sign in front of *ONE* block\n",
     "# after the Galaxy name, in order to set plate, mjd, fiber and norm)\n",
     "\n",
-    "## Galaxy Mystery2 - detele the \"#\" for the lines below \n",
+    "## Galaxy Mystery2 - delete the \"#\" for the lines below \n",
     "#plate = 1759\n",
     "#mjd = 53081\n",
     "#fiber = 126\n",
     "#norm = 15.\n",
     "\n",
-    "## Galaxy Mystery3 - detele the \"#\" for the lines below\n",
+    "## Galaxy Mystery3 - delete the \"#\" for the lines below\n",
     "#plate = 1839\n",
     "#mjd = 53471\n",
     "#fiber = 310\n",
     "#norm = 20.\n",
     "\n",
-    "## Galaxy Mystery4 - detele the \"#\" for the lines below\n",
+    "## Galaxy Mystery4 - delete the \"#\" for the lines below\n",
     "#plate = 2121\n",
     "#mjd = 54180\n",
     "#fiber = 523\n",
@@ -451,13 +461,8 @@
    "source": [
     "## Step 1.5: Redshift Ruler\n",
     "\n",
-    "Each group had a different mystery galaxy. Let's see how far away they are compared with each other by placing them on the \"redshift ruler\" on the white board at the front of the room (if applicable)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Each group had a different mystery galaxy. Let's see how far away they are compared with each other by placing them on the \"redshift ruler\" on the white board at the front of the room (if applicable).\n",
+    "\n",
     "### What's next?\n",
     "\n",
     "Well done! You have measured redshifts for two galaxies, which is how astronomers determine distances to galaxies. Remember, the further away a galaxy is from us, the faster is seems to be moving away from us, and the more its light (spectrum) is redshifted! That's because the universe is expanding.\n",
@@ -523,7 +528,15 @@
    "source": [
     "## Step 2.1: Selecting Galaxies in a Region of the Sky\n",
     "\n",
-    "Next, we will fetch the positions of galaxies on the sky, and plot their RA and Dec coordinates."
+    "Next, we will fetch the positions of galaxies on the sky, and plot their RA and Dec coordinates.\n",
+    "\n",
+    "<div class='alert alert-info'>\n",
+    "    <h3 class='alert-heading'>Helpful Reminder(s)</h3>\n",
+    "    <ul>\n",
+    "        <li>Click anywhere inside of a cell to select it.</li>\n",
+    "        <li>Hit [Shift + Enter] to run a selected cell.</li>\n",
+    "    </ul>\n",
+    "</div>"
    ]
   },
   {
@@ -654,9 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Fetch the sample from the Sloan data\n",
@@ -710,9 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#3D Plotting\n",
@@ -1019,94 +1028,6 @@
    "metadata": {},
    "source": [
     "HINT: for more color maps, you can look at this reference <a href=http://matplotlib.org/examples/color/colormaps_reference.html>page</a>. For example, you can replace \"rainbow\" with \"autumn_r\"."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# GENERAL COMMENTS:\n",
-    "* HAVE BACKGROUND TUCSON IMAGES WHEN SHOWING A PATCH OF THE SKY\n",
-    "* INCORPORATE STELLARIUM TO KNOW WHERE THE PATCH OF SKY IS\n",
-    "* BETTER EXPLANATIONS OF REDSHIFT\n",
-    "* CONDENSE DOWN THE QUESTIONS\n",
-    "* WHY ARE THERE GAPS BETWEEN THE REDS AND THE BLUES\n",
-    "___"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# IMPLEMENT ZOOMOUT\n",
-    "# IMPLEMENT UNITS\n",
-    "# IMPLEMENT BRIGHTNESS= INSTEAD OF X="
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# HAVING QUESTIONS PRESENT"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# CREATE A SLIDING WIDGET\n",
-    "# CREATE A PRINTBOX WHEN OVERLAYING\n",
-    "# FISH OUT ANSWER FILES AND UPLOAD TO GOOGLE DRIVE"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# IMPLEMENT A WIDGET SLIDER TO SELECT THE CORRECT VALUE"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# THIS DOES ACTUALLY WORK NOW\n",
-    "# GOING TO ANOTHER WEBSITE WITH CLUNKY SCIENTIFIC INTERFACE IS GOOD"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# FIX THE DOWNLOADING ISSUE"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# MAKE PLOTS WITHOUT WINDOW"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# HAVE THAT ANSWER TEXTBOX HERE"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# WHY IS IT EXECUTING TWICE"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# WHY IS THIS RUN TWICE???"
    ]
   }
  ],
