Updated notebook 1 with ongoing format. Minor tweak to captions in notebook 7.

--- a/_07_Large_Scale_Structure_of_the_Universe/Large_Scale_Structure_of_the_Universe.ipynb
+++ b/_07_Large_Scale_Structure_of_the_Universe/Large_Scale_Structure_of_the_Universe.ipynb
@@ -13,8 +13,7 @@
     "<font size='7'><u><b>Our Vast Universe Probed with Big Data</b></u></font>\n",
     "<br>\n",
     "\n",
-    "##### Written by Stephanie Juneau, NOAO (<mailto:sjuneau@noao.edu>), with contributions from Leah Fulmer & Gautham Narayan\n",
-    "Last updated on 10/12/2018\n",
+    "##### Written by Stephanie Juneau, NOAO, with contributions from Leah Fulmer & Gautham Narayan\n",
     "\n",
     "This notebook is interactive, and we will use it to learn and explore the distribution of galaxies in the universe. We follow a similar approach as other notebooks you might have used, in particular the one written by Gautham Narayan.\n",
     "\n",
@@ -41,10 +40,6 @@
     "    * [Step 2.2: Adding the 3rd Dimension](#Step-2.2:-Adding-the-3rd-Dimension)\n",
     "    * [Step 2.3: Zooming In and Zooming Out](#Step-2.3:-Zooming-In-and-Zooming-Out)\n",
     "    * [Step 2.4: Plot Full Sample over Sky Projection](#Step-2.4:-Plot-Full-Sample-over-Sky-Projection)\n",
-    "* [Glossary](#Glossary)\n",
-    "* [Extras](#Extras)\n",
-    "* [Bibliography](#Bibliography)\n",
-    "* [Acknowledgements](#Acknowledgements)\n",
     "___"
    ]
   },
@@ -185,6 +180,7 @@
     "            <font color='grey'>\n",
     "                <b>Figure 1:</b>\n",
     "                The Sloan Telescope at Apache Point, New Mexico.\n",
+    "                <br>\n",
     "                <b>Image Credit:</b>\n",
     "                SDSS Team, Fermilab Visual Media Services.\n",
     "            </font>\n",
@@ -194,7 +190,7 @@
     "\n",
     "The Sloan survey team found millions of stars and galaxies, and made their big data set public. In this activity, we will retrieve and examine galaxy data!\n",
     "\n",
-    "So how did Sloan take spectra of millions of stars and galaxies? The team used metal plates like the one shown below, with a hundreds of holes aligned with the stars and galaxies to be observed. An optical fiber is placed in each hole in order to transfer the light to the instrument and camera. As you will see below, the data are identified by their **Plate** number, their **Fiber** number, and the date when they were obtained - the **MJD** ([Modified Julian Date](https://en.wikipedia.org/wiki/Julian_day)).\n",
+    "So how did Sloan take spectra of millions of stars and galaxies? The team used metal plates like the one shown below, with a hundreds of holes aligned with the stars and galaxies to be observed. An optical fiber is placed in each hole in order to transfer the light to the instrument and camera. As you will see below, the data are identified by their *Plate* number, their *Fiber* number, and the date when they were obtained - the *MJD* ([Modified Julian Date](https://en.wikipedia.org/wiki/Julian_day)).\n",
     "\n",
     "<figure>\n",
     "    <center>\n",
@@ -205,8 +201,9 @@
     "            <font color='grey'>\n",
     "                <b>Figure 2:</b>\n",
     "                Holes in aluminum plates let the light from stars and galaxies passed to an optical fiber to the instrument.\n",
-    "                <b>Image credit:</b>\n",
-    "                D. Long, SDSS-III\n",
+    "                <br>\n",
+    "                <b>Image Credit:</b>\n",
+    "                D. Long, SDSS-III.\n",
     "            </font>\n",
     "        </figcaption>\n",
     "    </center>\n",
@@ -450,8 +447,7 @@
     "    </ul>\n",
     "</div>\n",
     "\n",
-    "Now, let's check the redshift and learn more information about those two galaxies. [Click this link.](http://cas.sdss.org/dr14/en/tools/explore/Summary.aspx) Click on \"Search\" on the left hand side menu bar, and then enter the \"Plate\", \"Fiber\" and \"MJD\" for one galaxy at a time, and hit \"Go\".\n",
-    "If you click on the image, you can move around, zoom in and out - it's like Google Maps for the night sky!\n",
+    "Now, let's check the redshift and learn more information about those two galaxies. [Click this link.](http://cas.sdss.org/dr14/en/tools/explore/Summary.aspx) Click on \"Search\" on the left hand side menu bar, and then enter the \"Plate\", \"Fiber\" and \"MJD\" for one galaxy at a time, and hit \"Go\". If you click on the image, you can move around, zoom in and out - it's like Google Maps for the night sky!\n",
     "___"
    ]
   },
@@ -487,11 +483,7 @@
     "        <figcaption>\n",
     "            <font color='grey'>\n",
     "                <b>Figure 4:</b>\n",
-    "                Illustration of the celestial coordinate system with RA and Dec. You can read\n",
-    "                <a href='http://dev.skyserver.sdss3.org/voyages/pre-flight/ra-and-dec.aspx'>\n",
-    "                    here\n",
-    "                </a>\n",
-    "                for an explanation by the SDSS team.\n",
+    "                Illustration of the celestial coordinate system with RA and Dec. You can read <a href='http://dev.skyserver.sdss3.org/voyages/pre-flight/ra-and-dec.aspx'>here</a> for an explanation by the SDSS team.\n",
     "            </font>\n",
     "        </figcaption>\n",
     "    </center>\n",
@@ -505,15 +497,7 @@
     "        <figcaption>\n",
     "            <font color='grey'>\n",
     "                <b>Figure 5:</b>\n",
-    "                Illustration of the celestial coordinate system with RA and Dec. You can read on Wikipedia about\n",
-    "                <a href='https://en.wikipedia.org/wiki/Right_ascension'>\n",
-    "                    Right Ascension\n",
-    "                </a>\n",
-    "                and\n",
-    "                <a href='https://en.wikipedia.org/wiki/Declination'>\n",
-    "                    Declination\n",
-    "                </a>\n",
-    "                .\n",
+    "                Illustration of the celestial coordinate system with RA and Dec. You can read on Wikipedia about <a href='https://en.wikipedia.org/wiki/Right_ascension'>Right Ascension</a> and <a href='https://en.wikipedia.org/wiki/Declination'>Declination</a>.\n",
     "            </font>\n",
     "        </figcaption>\n",
     "    </center>\n",
@@ -839,7 +823,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, you will make a 3D version of the above 2D plot (same dots but in 3D). You may need to execute the cell twice."
+    "Next, you will make a 3D version of the above 2D plot (same dots but in 3D)."
    ]
   },
   {
@@ -1027,7 +1011,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "HINT: for more color maps, you can look at this reference <a href=http://matplotlib.org/examples/color/colormaps_reference.html>page</a>. For example, you can replace \"rainbow\" with \"autumn_r\"."
+    "> <u><b>Hint:</b></u> for more color maps, you can look at this reference <a href=http://matplotlib.org/examples/color/colormaps_reference.html>page</a>. For example, you can replace \"rainbow\" with \"autumn_r\"."
    ]
   }
  ],
