Final tweaks to notebook 6's subtitles and table of contents. Minor text corrections to notebooks 1 and 7. Ready to merge to master branch.

--- a/_01_Lives_and_Deaths_of_Stars/Lives_and_Deaths_of_Stars.ipynb
+++ b/_01_Lives_and_Deaths_of_Stars/Lives_and_Deaths_of_Stars.ipynb
@@ -2,11 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "source": [
     "<br>\n",
     "<br>\n",
-    "<font size='7'><u><b>The Lives and Deaths of Stars</b></u></font>\n",
+    "<font size='6'><u><b>The Lives and Deaths of Stars</b></u></font>\n",
     "<br>\n",
     "\n",
     "##### Written by Gautham Narayan, STScI\n",
