--- a/_07_Large_Scale_Structure_of_the_Universe/Large_Scale_Structure_of_the_Universe.ipynb
+++ b/_07_Large_Scale_Structure_of_the_Universe/Large_Scale_Structure_of_the_Universe.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "<br>\n",
     "<br>\n",
-    "<font size='7'><u><b>Our Vast Universe Probed with Big Data</b></u></font>\n",
+    "<font size='6'><u><b>Our Vast Universe Probed with Big Data</b></u></font>\n",
     "<br>\n",
     "\n",
     "##### Written by Stephanie Juneau, NOAO, with contributions from Leah Fulmer & Gautham Narayan\n",
@@ -23,7 +23,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "source": [
     "# Table of Contents\n",
     "\n",
@@ -45,7 +49,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "source": [
     "# How to Use This Notebook\n",
     "\n",
@@ -63,7 +71,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "outputs": [],
    "source": [
     "# Text that follows a \"#\" is known as a comment.\n",
@@ -74,7 +86,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "source": [
     "To execute or run a selected cell, hit `[Shift + Enter]` on your keyboard.\n",
     "\n",
@@ -86,7 +102,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "outputs": [],
    "source": [
     "# Text that DOESN'T follow a \"#\" is considered code.\n",
@@ -99,7 +119,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "source": [
     "Running a cell creates an *output* directly below it. An output can be some text, a graph, an interactive slider, or even nothing at all! For that last case, you know you have run a cell when the `In [ ]:` becomes `In [#]:`, where \"#\" is any number.\n",
     "\n",
@@ -109,7 +133,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "source": [
     "# Pre-Activity Setup\n",
     "\n",
@@ -156,14 +184,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "source": [
     "___"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "source": [
     "# Activity 1: How Far Away are Galaxies?\n",
     "\n",
@@ -182,7 +218,7 @@
     "                The Sloan Telescope at Apache Point, New Mexico.\n",
     "                <br>\n",
     "                <b>Image Credit:</b>\n",
-    "                SDSS Team, Fermilab Visual Media Services.\n",
+    "                SDSS Team, Fermilab Visual Media Services\n",
     "            </font>\n",
     "        </figcaption>\n",
     "    </center>\n",
@@ -203,7 +239,7 @@
     "                Holes in aluminum plates let the light from stars and galaxies passed to an optical fiber to the instrument.\n",
     "                <br>\n",
     "                <b>Image Credit:</b>\n",
-    "                D. Long, SDSS-III.\n",
+    "                D. Long, SDSS-III\n",
     "            </font>\n",
     "        </figcaption>\n",
     "    </center>\n",
