--- a/_06_Black_Holes/Black_Holes.ipynb
+++ b/_06_Black_Holes/Black_Holes.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "<br>\n",
     "<br>\n",
-    "<font size='7'><u><b>Black Holes and the Fate of Galaxies</b></u></font>\n",
+    "<font size='6'><u><b>Black Holes and the Fate of Galaxies</b></u></font>\n",
     "<br>\n",
     "\n",
     "##### Written by Stéphanie Juneau, National Optical Astronomy Observatory, and Elliot Kisiel, University of Arizona\n",
@@ -23,21 +23,14 @@
     "\n",
     "* [How to Use This Notebook](#How-to-Use-This-Notebook)\n",
     "* [Pre-Activity Setup](#Pre-Activity-Setup)\n",
-    "* [Activity 1: ](#Activity-1:-)\n",
-    "    * [Step 1.1: ](#Step-1.1:-)\n",
-    "    * [Step 1.2: ](#Step-1.2:-)\n",
-    "    * [Step 1.3: ](#Step-1.3:-)\n",
-    "    * [Step 1.4: ](#Step-1.4:-)\n",
-    "    * [Step 1.5: ](#Step-1.5:-)\n",
-    "* [Activity 2: ](#Activity-2:-)\n",
-    "    * [Step 2.1: ](#Step-2.1:-)\n",
-    "    * [Step 2.2: ](#Step-2.2:-)\n",
-    "    * [Step 2.3: ](#Step-2.3:-)\n",
-    "    * [Step 2.4: ](#Step-2.4:-)\n",
-    "* [Glossary](#Glossary)\n",
-    "* [Extras](#Extras)\n",
-    "* [Bibliography](#Bibliography)\n",
-    "* [Acknowledgements](#Acknowledgements)\n",
+    "* [Activity 1: What Are Black Holes?](#Activity-1:-What-Are-Black-Holes?)\n",
+    "    * [Step 1.1: Using Light to Measure Sizes](#Step-1.1:-Using-Light-to-Measure-Sizes)\n",
+    "    * [Step 1.2: Light Travel Distances Relative to the Solar System](#Step-1.2:-Light-Travel-Distances-Relative-to-the-Solar-System)\n",
+    "* [Activity 2: How Big Is the Flare of 3C 279?](#Activity-2:-How-Big-Is-the-Flare-of-3C-279?)\n",
+    "    * [Step 2.1: Light-Year as a Distance](#Step-2.1:-Light-Year-as-a-Distance)\n",
+    "    * [Step 2.2: Let's Look at Some Real Data!](#Step-2.2:-Let's-Look-at-Some-Real-Data!)\n",
+    "* [Activity 3: How Much Energy Is in the Flare?](#Activity-3:-How-Much-Energy-Is-in-the-Flare?)\n",
+    "* [Conclusion: How Can Black Holes Change the Fate of Galaxies?](#Conclusion:-How-Can-Black-Holes-Change-the-Fate-of-Galaxies?)\n",
     "___"
    ]
   },
@@ -153,9 +146,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Activity 1: What are Black Holes?\n",
+    "# Activity 1: What Are Black Holes?\n",
     "\n",
-    "Black holes are astronomical objects that exert a extreme force of gravity due to their very high density and/or mass. If we describe gravity as the bending of the space, black holes bend space so strongly that there is a distance inside which even rays of light fall into the \"well\" by following the curvature. This distance corresponds to the \"event horizon\" of the black hole, and we cannot see or recover any information from what is inside this horizon.\n",
+    "Black holes are astronomical objects that exert a extreme force of gravity due to their very high density and/or mass. If we describe gravity as the bending of the space, black holes bend space so strongly that there is a distance inside which even rays of light fall into the \"[well](https://en.wikipedia.org/wiki/Gravity_well)\" by following the curvature. This distance corresponds to the \"[event horizon](https://en.wikipedia.org/wiki/Event_horizon)\" of the black hole, and we cannot see or recover any information from what is inside this horizon.\n",
     "\n",
     "<figure>\n",
     "    <center>\n",
@@ -166,8 +159,9 @@
     "            <font color='grey'>\n",
     "                <b>Figure 1:</b>\n",
     "                Illustration of the concept of gravity corresponding to the bending of space-time. This is predicted by Einstein's theory of general relativity. Black holes are the most extreme case with a bending so strong that even light cannot escape. This illustration is a cartoon version but we have to imagine space is already in 3D and so this \"bending\" goes in all directions around all objects with a mass.\n",
+    "                <br>\n",
     "                <b>Image credit:</b>\n",
-    "                Cetin Bal.\n",
+    "                Cetin Bal\n",
     "            </font>\n",
     "        </figcaption>\n",
     "    </center>\n",
@@ -186,8 +180,9 @@
     "            <font color='grey'>\n",
     "                <b>Figure 2:</b>\n",
     "                Orbits of stars around Sagittarius A* - the supermassive black hole at the center of our Milky Way galaxy.\n",
+    "                <br>\n",
     "                <b>Animation credit:</b>\n",
-    "                Keck, UCLA galactic center group, Ghez et al.\n",
+    "                Keck, UCLA galactic center group, Ghez et al\n",
     "            </font>\n",
     "        </figcaption>\n",
     "    </center>\n",
@@ -204,8 +199,9 @@
     "            <font color='grey'>\n",
     "                <b>Figure 3:</b>\n",
     "                Artist illustration of a supermassive black hole surrounded by a swirling disk of material falling onto it, which is called the <i>accretion disk</i>. The purplish ball of light above the black hole, a feature called the corona, contains highly energetic particles that generate X-ray light. If you could view the corona with your eyes, it would appear nearly invisible since we can't see its X-ray light. Even higher energy than X-ray light, <i>Gamma-ray light</i> can be emitted by material moving extremely fast along a jet.\n",
+    "                <br>\n",
     "                <b>Image credit:</b>\n",
-    "                NASA/JPL-Caltech.\n",
+    "                NASA/JPL-Caltech\n",
     "            </font>\n",
     "        </figcaption>\n",
     "    </center>\n",
@@ -228,8 +224,9 @@
     "            <font color='grey'>\n",
     "                <b>Figure 4:</b>\n",
     "                Artist rendering showing a glowing disk of material swirling around a supermassive black hole (which we cannot see, but it would be located behind the bright spot at the inner part of the disk). The \"Real Image\" shows the view in Gamma rays - a type of light with even higher energy than X-rays - as seen with a Gamma-ray telescope.\n",
+    "                <br>\n",
     "                <b>Image Credits:</b>\n",
-    "                EGRET Team, Compton Observatory, NASA.\n",
+    "                EGRET Team, Compton Observatory, NASA\n",
     "            </font>\n",
     "        </figcaption>\n",
     "    </center>\n",
@@ -264,7 +261,7 @@
     "First, let's see how we can use light (more specifically light travel time) to measure sizes and distances. It works because light has a specific travel speed. It's very fast but not infinite!\n",
     "\n",
     "Light travels at 300,000 km/s.<br>\n",
-    "*Wait, how fast is that in miles per hour (mph)?*\n",
+    "> Wait, how fast is that in miles per hour (mph)?\n",
     "\n",
     "<div class='alert alert-info'>\n",
     "    <h3 class='alert-heading'>Helpful Reminder(s)</h3>\n",
@@ -437,7 +434,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Activity 2: How big is the flare of 3C 279?\n",
+    "# Activity 2: How Big Is the Flare of 3C 279?\n",
     "\n",
     "Now that we have seen that we can measure sizes with the light travel time, let's see how this applies to a flare from a quasar!\n",
     "\n",
@@ -454,6 +451,17 @@
     "        </figcaption>\n",
     "    </center>\n",
     "</figure>\n",
+    "\n",
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 2.1: Light-Year as a Distance\n",
+    "\n",
+    "To get a better sense of how much distance a light-year is, we will write some code to convert it into kilometers.\n",
     "\n",
     "<div class='alert alert-info'>\n",
     "    <h3 class='alert-heading'>Helpful Reminder(s)</h3>\n",
@@ -489,7 +497,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 2.1: Let's look at some real data!\n",
+    "## Step 2.2: Let's Look at Some Real Data!\n",
     "\n",
     "The quasar **3C 279** was observed with the Fermi satellite to monitor it's brightness in gamma-ray light over many years. First, let's look at real astronomical data taken by the EGRET gamma-ray instrument that was onboard NASA’s Compton Gamma Ray Observatory.\n",
     "\n",
@@ -542,9 +550,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> The vertical axis plots the photon flux (as described above). The horizontal axis plots the day of the year in 1991. For example, the 180th day in 1991 was the 29th of June.\n",
+    "In the graph above, the vertical axis plots the photon flux (as described above). The horizontal axis plots the day of the year in 1991. For example, the 180th day in 1991 was the 29th of June.\n",
     "\n",
-    "> The lines sticking out from the dots are known as error bars. They give the uncertainty in a measurement. For example, if the instrument used to measure the photon flux is not very accurate, it will have large error bars.\n",
+    "The lines sticking out from the dots are known as error bars. They give the uncertainty, or range of probable values in a measurement. For example, if the instrument used to measure the photon flux is not very accurate, it will have large error bars. An accurate instrument will give smaller error bars, as the value is much more certain.\n",
     "\n",
     "<div class='alert alert-success'>\n",
     "    <h3 class='alert-heading'>Quick Question(s)</h3>\n",
@@ -701,7 +709,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Activity 3: How much energy is in the flare?\n",
+    "# Activity 3: How Much Energy Is in the Flare?\n",
     "\n",
     "In this activity, we will calculate the energy emitted in the flare. First, you will read the flux from the graph, and the next steps will guide you through the conversion. We will compare to the energy of the Sun, and of an entire galaxy!\n",
     "\n",
@@ -920,7 +928,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Conclusion: How can black holes change the fate of galaxies?\n",
+    "# Conclusion: How Can Black Holes Change the Fate of Galaxies?\n",
     "\n",
     "<div class='alert alert-success'>\n",
     "    <h3 class='alert-heading'>Quick Question(s)</h3>\n",
