--- a/05_Gravitational_Lensing/Lens_demo_2018_v2.ipynb
+++ b/05_Gravitational_Lensing/Lens_demo_2018_v2.ipynb
@@ -5,9 +5,12 @@
    "metadata": {},
    "source": [
     "\n",
-    "# Gravitational Lensing\n",
+    "<br>\n",
+    "<br>\n",
+    "<font size='6'><u><b>Gravitational Lensing</b></u></font>\n",
+    "<br>\n",
     "\n",
-    "<i>A. Bolton, 2017</i>\n",
+    "##### A. Bolton, 2017\n",
     "\n",
     "Updated 2018:\n",
     "<i> Elliot Kisiel</i> and <i>Connie Walker</i>\n",
