--- a/05_Gravitational_Lensing/Lens_demo_2018_v2.ipynb
+++ b/05_Gravitational_Lensing/Lens_demo_2018_v2.ipynb
@@ -4,30 +4,110 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "<br>\n",
     "<br>\n",
     "<font size='6'><u><b>Gravitational Lensing</b></u></font>\n",
     "<br>\n",
     "\n",
-    "##### A. Bolton, 2017\n",
+    "##### Written by A. Bolton, 2017\n",
     "\n",
-    "Updated 2018:\n",
-    "<i> Elliot Kisiel</i> and <i>Connie Walker</i>\n",
+    "##### Updated 2018: Elliot Kisiel and Connie Walker\n",
     "\n",
-    "## Instructions and overview\n",
-    "You have learned about how we can measure the mass of a galaxy based on the gravitational lensing of a foreground galaxy. This lensing effect can be seen in the various images below. In this activity we will be walking through some of the steps that astronomers use to determine the mass of a galaxy by examining the lensing effects.<br>\n",
+    "You have learned about how we can measure the mass of a galaxy based on the gravitational lensing of a foreground galaxy. This lensing effect can be seen in the various images below. In this activity we will be walking through some of the steps that astronomers use to determine the mass of a galaxy by examining the lensing effects.\n",
     "\n",
     "<img src=\"SloanLensACS_Survey.pdf\" width=\"900\" height=\"10800\">\n",
     "\n",
-    "### To execute the code in each box (or \"cell\"), hold down the \"shift\" key and press the \"return\" key<br>\n"
+    "___"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Setup and definitions"
+    "# Table of Contents\n",
+    "\n",
+    "* [How to Use This Notebook](#How-to-Use-This-Notebook)\n",
+    "* [Pre-Activity Setup](#Pre-Activity-Setup)\n",
+    "* [Activity 1: ](#Activity-1:-)\n",
+    "    * [Part 1.1: ](#Part-1.1:-)\n",
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# How to Use This Notebook\n",
+    "\n",
+    "The webpage you are in is actually an app - much like the ones on your cellphone. This app consists of cells.\n",
+    "\n",
+    "An *input* cell looks like a light grey box with an `In [ ]:` on its left. Input cells each contain code - instructions to make the computer do something.\n",
+    "\n",
+    "To activate or select a cell, click anywhere inside of it.\n",
+    "\n",
+    "<div class='alert alert-info'>\n",
+    "    <font size='3'><b>Select the cell below and read its contents.</b></font>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Text that follows a \"#\" is known as a comment.\n",
+    "# Comments do not affect your code in any way.\n",
+    "# You should always read the comments at the top of each cell you interact with.\n",
+    "# Comments will be used to describe what the cell's code is actually doing."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To execute or run a selected cell, hit `[Shift + Enter]` on your keyboard.\n",
+    "\n",
+    "<div class='alert alert-info'>\n",
+    "    <font size='3'><b>Select the cell below and read its contents. Then, run the cell.</b></font>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Text that DOESN'T follow a \"#\" is considered code.\n",
+    "# Lines of code are instructions given to your computer.\n",
+    "# The line of code below is a \"print\" statement.\n",
+    "# A print statement literally prints out the text between its quotes.\n",
+    "\n",
+    "print(\"Congrats! You have successfully run your first cell!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Running a cell creates an *output* directly below it. An output can be some text, a graph, an interactive slider, or even nothing at all! For that last case, you know you have run a cell when the `In [ ]:` becomes `In [#]:`, where \"#\" is any number.\n",
+    "\n",
+    "You can learn more about how Jupyter notebooks work at https://try.jupyter.org/\n",
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pre-Activity Setup\n",
+    "\n",
+    "In order for any of the activities to work properly, you must import the libraries needed for the code in this notebook.\n",
+    "\n",
+    "<div class='alert alert-info'>\n",
+    "    <font size='3'><b>Select and run the cell below.</b></font>\n",
+    "</div>"
    ]
   },
   {
@@ -44,6 +124,13 @@
     "from matplotlib import pyplot as p\n",
     "from matplotlib import cm\n",
     "import lensdemo_funcs as ldf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "___"
    ]
   },
   {
