Cleaned up accessory files and sorted them into folders. Standardized .jpeg to .jpg. Updated README.

--- a/04_Galactic_Neighborhood/Galactic_Neighborhood.ipynb
+++ b/04_Galactic_Neighborhood/Galactic_Neighborhood.ipynb
@@ -181,7 +181,7 @@
    "outputs": [],
    "source": [
     "import io, base64\n",
-    "video = io.open('classical_sats_ufds_font.mp4', 'r+b').read()\n",
+    "video = io.open('Figures/classical_sats_ufds_font.mp4', 'r+b').read()\n",
     "encoded = base64.b64encode(video)\n",
     "HTML(data='''\n",
     "<video controls autoplay loop>\n",
@@ -212,7 +212,7 @@
     "<figure>\n",
     "    <center>\n",
     "        <br>\n",
-    "        <img src='M31.jpg', width='800'>\n",
+    "        <img src='Figures/M31.jpg', width='800'>\n",
     "        <br>\n",
     "        <figcaption>\n",
     "            <font color='grey'>\n",
@@ -229,7 +229,7 @@
     "<figure>\n",
     "    <center>\n",
     "        <br>\n",
-    "        <img src='pandas.jpg', width='800'>\n",
+    "        <img src='Figures/pandas.jpg', width='800'>\n",
     "        <br>\n",
     "        <figcaption>\n",
     "            <font color='grey'>\n",
@@ -302,9 +302,9 @@
     "### ignore everything below here ###\n",
     "\n",
     "# headers:  t, x, y, z, vx, vy, vz\n",
-    "MWOrbit = np.genfromtxt('Orbit_MW.txt',dtype=None,names=True) \n",
-    "M31Orbit = np.genfromtxt('Orbit_M31.txt',dtype=None,names=True) \n",
-    "M33Orbit = np.genfromtxt('Orbit_M33.txt',dtype=None,names=True)\n",
+    "MWOrbit = np.genfromtxt('Data/Orbit_MW.txt',dtype=None,names=True) \n",
+    "M31Orbit = np.genfromtxt('Data/Orbit_M31.txt',dtype=None,names=True) \n",
+    "M33Orbit = np.genfromtxt('Data/Orbit_M33.txt',dtype=None,names=True)\n",
     "\n",
     "\n",
     "# Determine the magnitude of the \n",
