--- a/05_Gravitational_Lensing/Gravitational_Lensing.ipynb
+++ b/05_Gravitational_Lensing/Gravitational_Lensing.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "You have learned about how we can measure the mass of a galaxy based on the gravitational lensing of a foreground galaxy. This lensing effect can be seen in the various images below. In this activity, we will be walking through some of the steps that astronomers use to determine the mass of a galaxy by examining the lensing effects.\n",
     "\n",
-    "<img src='SloanLensACS_Survey.png' width='900'>\n",
+    "<img src='Figures/SloanLensACS_Survey.png' width='900'>\n",
     "\n",
     "___"
    ]
@@ -352,7 +352,7 @@
     "\n",
     "Now that we have tweaked the parameters for both Pat and Chris individually, what happens if we change the parameters of both at the same time? In the following cells, the left image is Pat before it is lensed and the right image is Pat after its light has been bent by Chris and therefore lensed. **It is important to note here that we are not displaying Chris.**\n",
     "\n",
-    "<img src=\"Lensed_Galaxy_Components_v2.png\" width=\"800\">\n",
+    "<img src=\"Figures/Lensed_Galaxy_Components_v2.png\" width=\"800\">\n",
     "\n",
     "___"
    ]
@@ -401,7 +401,7 @@
     ">$0.01 \\le$ `g_axrat` $\\le 1$  \n",
     ">$0 \\le$ `g_pa` $\\le 180$\n",
     "\n",
-    "<img src='lens_image_mosaic_v2.png'>\n",
+    "<img src='Figures/lens_image_mosaic_v2.png'>\n",
     "\n",
     "<div class='alert alert-info'>\n",
     "    <h3 class='alert-heading'>Helpful Reminder(s)</h3>\n",
@@ -512,7 +512,7 @@
     ">$0 \\le$ `l_axrat` $\\le 1$  \n",
     ">$0 \\le$ `l_pa` $\\le 180$\n",
     "\n",
-    "<img src = 'real_galaxies.png'>"
+    "<img src = 'Figures/real_galaxies.png'>"
    ]
   },
   {
@@ -600,9 +600,9 @@
     "\n",
     "In the diagram below, the Einstein radius is given by $\\theta_1$.\n",
     "\n",
-    "<img src = \"Einstein_radius.png\" width = 400 height = 400>\n",
+    "<img src = \"Figures/Einstein_radius.png\" width = 400 height = 400>\n",
     "\n",
-    "<img src = \"grav_lens.png\">\n",
+    "<img src = \"Figures/grav_lens.png\">\n",
     "\n",
     "___"
    ]
